SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_4.lang
var x = 4 var y = 10;